--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.6",
+    "@react-navigation/drawer": "^5.9.0",
+    "@react-navigation/native": "^5.7.3",
+    "@react-navigation/stack": "^5.9.0",
     "axios": "^0.19.2",
     "expo": "~37.0.3",
     "react": "~16.9.0",
@@ -23,8 +26,8 @@
     "react-native-screens": "~2.2.0",
     "react-native-svg": "^12.1.0",
     "react-native-web": "~0.11.7",
-    "react-navigation": "^4.3.8",
-    "react-navigation-stack": "^2.3.13",
+    "react-navigation": "^4.4.0",
+    "react-navigation-stack": "^2.8.2",
     "victory-native": "^35.0.0"
   },
   "devDependencies": {
