--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
     "react-native-calendars": "^1.300.0",
+    "react-native-chart-kit": "^6.6.1",
     "react-native-elements": "^2.0.4",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-paper": "^3.8.0",
